Ensure back buttons are visible even when there is no caption (#13585)

--- a/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
+++ b/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
@@ -2189,6 +2189,7 @@ select.v-select-select::-ms-expand {
     box-shadow: none;
     border-radius: borderRadius;
     line-height:30px;
+    min-height: 30px;
 }
 
 .v-touchkit-navbutton-back {
